			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ENHANCED: More thread-allocation issues.  Avoid memory floating
    uncontrolled between threads through message exchange or other dynamic
    datastructures allocated by thread 1 and consumed by thread 2.
    Sergey Tikhonov.

  * FIXED: Pretty printing not proper lists in the GUI tracer.  David Reitter.

  * ADDED: Hooks into the profiler that allow for profiling external
    packages such as XPCE.

  * FIXED: Bug in profiler causing very large overhead under some
    circumstances.  Tolga Konik.

  * ENHANCED: thread memory pooling could waste memory, especially in
    designs where a pool of threads is fired, waited for, re-started,
    etc.  Sergey Tikhonov.

VERSION 5.2.3 (Jul 04, 2003)
============================

  * ENHANCED: make trace/0 work while skipping, so an explicit trace command
    always works.  Alan Baljeu.

  * FIXED: Bug#71: graphical tracer confused about (a,b),c nested inside
    an if-then-else.  Holger Kanwischer.

  * FIXED: call_cleanup/3 to call the handler on deterministic exit in
    debug mode.  Holger Kanwischer.

  * MODIFIED: hide predicates starting with $ from listing/0.  Paulo Moura.

  * FIXED: compiler warnings on initPrologThreads().  Paulo Moura.

  * MODIFIED: Predicates whose name starts with '$' are automatically
    hidden from the tracer.  To comfort Logtalk.  Paulo Moura.

  * FIXED: retractall/1 to call setDynamicProcedure() instead of simply
    modifying the predicate.  setDynamicProcedure() to call the clause
    garbage collector before deciding it cannot turn static predicate
    with clauses into a dynamic one.  Anders Bouwer.

  * FIXED: Deadlock in thread_statistics on `self'.  Sergey Tikhonov.
